--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: 0.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-22 22:34+0200\n"
-"PO-Revision-Date: 2012-08-25 13:45+0200\n"
+"PO-Revision-Date: 2012-09-20 08:09+0200\n"
 "Last-Translator: Walter <wwycheuk@gmail.com>\n"
 "Language-Team: zh_TW <zh_TW@li.org>\n"
 "Language: zh_TW\n"
@@ -498,7 +498,7 @@ msgstr "卸載裝置"
 
 #: ../src/gtk/fm-places-view.c:101
 msgid "Eject Removable Media"
-msgstr "退出可移除媒體"
+msgstr "退出移除式媒體"
 
 #. FIXME: we need to set a proper parent window for the dialog
 #: ../src/gtk/fm-places-view.c:114 ../src/gtk/fm-places-view.c:836
