--- a/po/ro.po
+++ b/po/ro.po
@@ -6,11 +6,11 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: libfm 0.1.17\n"
+"Project-Id-Version: libfm 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-08-22 22:34+0200\n"
-"PO-Revision-Date: 2012-07-09 17:10+0200\n"
-"Last-Translator: Mișu <dumol@l10n.ro>\n"
+"PO-Revision-Date: 2012-09-20 20:27+0300\n"
+"Last-Translator: Mișu Moldovan <dumol@l10n.ro>\n"
 "Language-Team: Romanian <diacritice@googlegroups.com>\n"
 "Language: ro\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n==1 ? 0 : (n==0 || (n%100 > 0 && n%100 < "
 "20)) ? 1 : 2);;\n"
-"X-Generator: Pootle 2.0.5\n"
+"X-Generator: Virtaal 0.7.0\n"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "Choose An Application"
@@ -167,7 +167,7 @@ msgstr "<b>Editare conținut:</b>"
 
 #: ../data/ui/file-prop.glade.h:16
 msgid "<b>Execute:</b>"
-msgstr "<b>Execută:</b>"
+msgstr "<b>Executare:</b>"
 
 #: ../data/ui/file-prop.glade.h:17
 msgid "<b>Special bits:</b>"
@@ -215,19 +215,19 @@ msgstr "Persistent"
 
 #: ../data/ui/file-prop.glade.h:28
 msgid "Set GID"
-msgstr "Setare GID"
+msgstr "GID impus"
 
 #: ../data/ui/file-prop.glade.h:29
 msgid "Sticky & set GID"
-msgstr "Setare GID și persistență"
+msgstr "Persistent și GID impus"
 
 #: ../data/ui/file-prop.glade.h:30
 msgid "Set UID"
-msgstr "Setare UID"
+msgstr "UID impus"
 
 #: ../data/ui/file-prop.glade.h:31
 msgid "Set UID & GID"
-msgstr "Setare UID & GID"
+msgstr "UID și GID impuse"
 
 #: ../data/ui/file-prop.glade.h:32
 msgid "Nobody"
@@ -378,7 +378,7 @@ msgstr "Rețea"
 
 #: ../src/base/fm-mime-type.c:60
 msgid "Shortcuts"
-msgstr "Scurtături"
+msgstr "Lansatori"
 
 #: ../src/base/fm-mime-type.c:63
 msgid "Mount Point"
@@ -430,7 +430,7 @@ msgid ""
 "don't support this operation.\n"
 "Do you want to delete them instead?"
 msgstr ""
-"Unele fișiere nu pot fi mutate la coșul de gunoi deoarece  sistemul de "
+"Unele fișiere nu pot fi mutate la coșul de gunoi deoarece sistemul de "
 "fișiere nu are suport pentru o asemenea acțiune.\n"
 "Doriți însă să le ștergeți cu totul?"
 
@@ -608,94 +608,88 @@ msgstr "Modificat"
 
 #: ../src/gtk/fm-folder-view.c:121
 msgid "Create _New..."
-msgstr ""
+msgstr "Creează un _nou..."
 
 #: ../src/gtk/fm-folder-view.c:122
 msgid "Folder"
-msgstr ""
+msgstr "Dosar"
 
 #: ../src/gtk/fm-folder-view.c:125
-#, fuzzy
 msgid "Blank File"
-msgstr "Disc MO gol"
+msgstr "Fișier gol"
 
 #: ../src/gtk/fm-folder-view.c:126
-#, fuzzy
 msgid "Shortcut"
-msgstr "Scurtături"
+msgstr "Lansator"
 
 #: ../src/gtk/fm-folder-view.c:137
 msgid "_Invert Selection"
-msgstr ""
+msgstr "_Inversează selecția"
 
 #: ../src/gtk/fm-folder-view.c:138
 msgid "_Sort Files"
-msgstr ""
+msgstr "_Sortează fișierele"
 
 #: ../src/gtk/fm-folder-view.c:150
 msgid "Show _Hidden"
-msgstr ""
+msgstr "Arată fișierele _ascunse"
 
 #: ../src/gtk/fm-folder-view.c:151
 msgid "Only for this folder"
-msgstr ""
+msgstr "Doar pentru acest dosar"
 
 #: ../src/gtk/fm-folder-view.c:152
 msgid "Check to remember sort as folder setting rather than global one"
 msgstr ""
+"Bifați pentru a reține sortarea curentă ca fiind specifică acestui dosar"
 
 #: ../src/gtk/fm-folder-view.c:153
-#, fuzzy
 msgid "Mingle files and folders"
-msgstr "Selectați un director"
+msgstr "Amestecă fișierele și dosarele"
 
 #: ../src/gtk/fm-folder-view.c:154
 msgid "Ignore name case"
-msgstr ""
+msgstr "Ignoră majusculele"
 
 #: ../src/gtk/fm-folder-view.c:165
-#, fuzzy
 msgid "By _Name"
-msgstr "Nume"
+msgstr "După _nume"
 
 #: ../src/gtk/fm-folder-view.c:166
 msgid "By _Modification Time"
-msgstr ""
+msgstr "După data m_odificării"
 
 #: ../src/gtk/fm-folder-view.c:167
-#, fuzzy
 msgid "By _Size"
-msgstr "Mărime"
+msgstr "După _mărime"
 
 #: ../src/gtk/fm-folder-view.c:168
-#, fuzzy
 msgid "By File _Type"
-msgstr "<b>Tip de fișier:</b>"
+msgstr "După _tipul de fișier"
 
 #: ../src/gtk/fm-folder-view.c:684
 msgid "Enter a name for the newly created folder:"
-msgstr ""
+msgstr "Precizați un nume pentru dosarul nou creat:"
 
 #: ../src/gtk/fm-folder-view.c:686
 msgid "Enter a name for the newly created file:"
-msgstr ""
+msgstr "Precizați un nume pentru fișierul nou creat:"
 
 #: ../src/gtk/fm-folder-view.c:687
 msgid "Create New..."
-msgstr ""
+msgstr "Creare de element nou..."
 
 #: ../src/gtk/fm-folder-view.c:687
-#, fuzzy
 msgid "New"
-msgstr "Rețea"
+msgstr "Nou"
 
 #: ../src/gtk/fm-folder-view.c:779
 msgid "Error, lxshortcut not installed"
-msgstr ""
+msgstr "Eroare, lxshortcut nu e instalat"
 
 #: ../src/gtk/fm-folder-view.c:784
 msgid "Failed to start lxshortcut"
-msgstr ""
+msgstr "Nu s-a putut porni lxshortcut"
 
 #: ../src/gtk/fm-app-menu-view.c:162
 msgid "Installed Applications"
