--- a/po/uk.po
+++ b/po/uk.po
@@ -7,15 +7,15 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-23 14:40+0200\n"
-"PO-Revision-Date: 2012-09-22 04:00+0300\n"
+"PO-Revision-Date: 2012-09-23 17:07+0200\n"
 "Last-Translator: LStranger <andrej@rep.kiev.ua>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 "X-Generator: Pootle 2.0.5\n"
 "X-Poedit-Country: Ukraine\n"
 "X-Poedit-Language: Ukrainian\n"
@@ -420,7 +420,6 @@ msgid "<b>File Contain_s</b>"
 msgstr "<b>_Файл містить</b>"
 
 #: ../data/ui/filesearch.glade.h:25
-#, fuzzy
 msgid "C_ontent"
 msgstr "_Вміст"
 
@@ -450,7 +449,6 @@ msgid "_Earlier than:"
 msgstr "Д_авніші ніж:"
 
 #: ../data/ui/filesearch.glade.h:32
-#, fuzzy
 msgid "L_ater than:"
 msgstr "_Новіші ніж:"
 
